fix workbench layout issue

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -9,5 +9,6 @@
     flex: 1;
     color: white;
     display: flex;
-    flex-direction: row;
+    flex-direction: row; 
+    height: 0;
 }
